import { NullableProperty } from "@common/utils";
import { Entity, ManyToOne, Property, type Ref, t } from "@mikro-orm/core";
import { type NotificationType } from "@modules/notification/notification.type";
import { BaseEntity } from "./base.entity";
import { User } from "./user.entity";

@Entity()
export class Notification extends BaseEntity {
	@Property()
	type!: NotificationType;

	@Property()
	content!: string;

	@NullableProperty({ type: t.datetime })
	readAt?: Date;

	@ManyToOne(() => User, {
		ref: true,
		nullable: true,
		deleteRule: "set null",
	})
	actor?: Ref<User>;

	@ManyToOne(() => User, { ref: true })
	recipient!: Ref<User>;
}
